# qrcode-tool

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  qr-display.html  scanner.html
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  hotkey.rs  main.rs
src/lib/: app.js
