[package]
name = "qrcode-tool"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"
rdev = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
